[package]
name = "jsh-x"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4"
tokio = { version = "1", features = ["full"] }
webbrowser = "0.7"
lazy_static = "1.4"
env_logger = "0.9"
ctrlc = "3.2"
winres = "0.1.12"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

[profile.release]
crate-type = ["cdylib", "rlib"]

[package.metadata.windows]
subsystem = "windows"

[build-dependencies]
winres = "0.1"
